Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/NewGeneric.out
NewGeneric.java:13:28: compiler.err.type.found.req: (compiler.misc.type.parameter: T), (compiler.misc.type.req.class)
1 error
